tests/baselines/reference/objectLiteralMemberWithModifiers2.errors.txt
objectLiteralMemberWithModifiers2.ts(1,11): error TS1042: 'public' modifier cannot be used here.
objectLiteralMemberWithModifiers2.ts(1,22): error TS2378: A 'get' accessor must return a value.


==== objectLiteralMemberWithModifiers2.ts (2 errors) ====
    var v = { public get foo() { } }
              ~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
                         ~~~
!!! error TS2378: A 'get' accessor must return a value.